--- a/style.css
+++ b/style.css
@@ -1,11 +1,28 @@
 
+h1{
+	text-align:center;
+}
+a{
+	text-decoration: none;
+	font-size:20px;
+	color:black;
+}
+li{
+	list-style-type:none;
+}
+
+
+#login{
+	font-size:14px
+}
+#login a{
+	font-size:14px
+}
+
+
 #header li{
 	display:inline-block;
 	margin-right:30px;
-}
-#header a{
-	text-decoration: none;
-	font-size:20px;
 }
 #header a:hover{
 	text-decoration:underline;
@@ -15,4 +32,21 @@
 	position:fixed;
 	bottom:10px;
 	right:20px;
+}
+
+#login{
+	position:fixed;
+	right:10px;
+	top:10px;
+}
+
+#sign_up_form{
+	border:solid 2px black;
+	margin-left:auto;
+	margin-right:auto;
+	width:400px;
+}
+
+#sign_up_form p{
+	margin-left:20px;
 }
