--- a/style.css
+++ b/style.css
@@ -1,4 +1,58 @@
+.stiker{
+	width:90px;
+	display:inline-block;
+	margin:40px;
+}
+.stiker img{
+	max-width:100%;
+}
 
+#my_galery{
+	width:90%;
+	margin-left:auto;
+	margin-right:auto;
+	/* border:solid 2px blue; */
+}
+#side{
+	width:30%;
+	border:solid 2px green;
+	display:inline-block;
+	vertical-align:top;
+	min-height:500px;
+}
+#side img{
+	max-width:100%;
+	margin-bottom:20px;
+}
+
+#imgscreenshot{
+	width:90%;
+	padding-left:5%;
+	padding-right:5%;
+}
+
+#main{
+	display:inline-block;
+	/* border:solid 2px red; */
+	width:60%;
+	margin-right:8%;
+}
+
+#video{
+	text-align:center;
+	padding-left:auto;
+	padding-right:auto;
+	/* border:solid 5px pink; */
+}
+video{
+	max-width:100%;
+	height:auto;
+}
+#main input[type=button]{
+	margin:20px;
+	height:40px;
+	border:solid 2px black;
+}
 h1{
 	text-align:center;
 }
@@ -10,43 +64,46 @@ a{
 li{
 	list-style-type:none;
 }
-
-
+#login{
+	padding-left:10px;
+	width:100px;
+	position:absolute;
+	right:10px;
+	top:10px;
+}
 #login{
 	font-size:14px
 }
 #login a{
 	font-size:14px
 }
-
-
+#header{
+	background-color:blue;
+	margin-top:0;
+}
 #header li{
 	display:inline-block;
 	margin-right:30px;
+	padding:3px;
+}
+#header a{
+	color:white;
 }
 #header a:hover{
 	text-decoration:underline;
+	color:red;
 }
-
 #footer{
-	position:fixed;
-	bottom:10px;
-	right:20px;
+	text-align:right;
+	margin-right:30px;
+	margin-top:50px;
 }
-
-#login{
-	position:fixed;
-	right:10px;
-	top:10px;
-}
-
-#sign_up_form{
+.form{
 	border:solid 2px black;
 	margin-left:auto;
 	margin-right:auto;
 	width:400px;
 }
-
-#sign_up_form p{
+.form  p{
 	margin-left:20px;
 }
